--- a/tabs.html
+++ b/tabs.html
@@ -13,7 +13,7 @@
         <p class="texto-desc">Aquí podrás buscar Funciones ,Hooks, Clases y Métodos de WordPress</p>
         <div class="panel-section-separator"></div>
         <div class="contenedor-wp">
-            <input type="text" class="text-function" onkeypress="alert('hola')" id="WPFunction" placeholder="ej. post, author,get_tag">
+            <input type="text" class="text-function"   id="WPFunction" placeholder="ej. post, author,get_tag">
             <a href="#" id="tabs-create"> Buscar</a>
          </div>
         <br>
@@ -37,6 +37,6 @@
      
     </div>
     <script src="tabs.js"></script>
-</body>
+ </body>
 
 </html>
