se agrego texto y el readme

--- a/tabs.html
+++ b/tabs.html
@@ -10,7 +10,7 @@
     <div class="panel">
         <img src="images/header.png" class="wp-image-header" alt="">
         <h3 class="wp-title-texto">Recursos para Desarrolladores</h3>
-        <p class="texto-desc">Aquí podrás buscar Funciones ,Hooks, Clases y Métodos de WordPress</p>
+        <p class="texto-desc">Aquí podrás buscar Funciones ,Hooks, Clases y Métodos de WordPress en <b>https://developer.wordpress.org/<b></p>
         <div class="panel-section-separator"></div>
         <div class="contenedor-wp">
             <input type="text" class="text-function"   id="WPFunction" placeholder="ej. post, author,get_tag">
